--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 .DS_Store
+module1/dataset/denoised_scenes_d10/scene1.png
+module1/dataset/denoised_scenes_d10/scene10.png
+module1/dataset/denoised_scenes_d10/scene11.png
+module1/dataset/denoised_scenes_d10/scene12.png
+module1/dataset/denoised_scenes_d10/scene2.png
+module1/dataset/denoised_scenes_d10/scene3.png
+module1/dataset/denoised_scenes_d10/scene4.png
+module1/dataset/denoised_scenes_d10/scene5.png
+module1/dataset/denoised_scenes_d10/scene6.png
+module1/dataset/denoised_scenes_d10/scene7.png
+module1/dataset/denoised_scenes_d10/scene8.png
+module1/dataset/denoised_scenes_d10/scene9.png
+module1/dataset/denoised_scenes_d500/scene1.png
+module1/dataset/denoised_scenes_d500/scene10.png
+module1/dataset/denoised_scenes_d500/scene11.png
+module1/dataset/denoised_scenes_d500/scene12.png
+module1/dataset/denoised_scenes_d500/scene2.png
+module1/dataset/denoised_scenes_d500/scene3.png
+module1/dataset/denoised_scenes_d500/scene4.png
+module1/dataset/denoised_scenes_d500/scene5.png
+module1/dataset/denoised_scenes_d500/scene6.png
+module1/dataset/denoised_scenes_d500/scene7.png
+module1/dataset/denoised_scenes_d500/scene8.png
+module1/dataset/denoised_scenes_d500/scene9.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene1.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene10.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene11.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene12.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene2.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene3.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene4.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene5.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene6.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene7.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene8.png
+module1/dataset/denoised_scenes_d500_nonlocalmeans/scene9.png
